Fix breakpoint overlap.

--- a/skyroom-control-panel_files/style.css
+++ b/skyroom-control-panel_files/style.css
@@ -913,7 +913,7 @@ background-color:#fff;
 	}
 }
 
-@media (max-width: 768px) and (min-width: 550px) {
+@media (max-width: 767px) and (min-width: 550px) {
 	.main-menu .main-item {
 		width: 25%;
 	}
